tests/base/parser/bad/cmodule-procedure-with.scilla
scilla_version 0

contract Test
()

(* procedures may not be called field *) 
procedure field ()
  accept
end
